--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     box-sizing: border-box;
     font-size: 100%;
     text-decoration: none;
-    overflow: auto;
+    overflow: hidden;
 }
 
 body {
